update fb app id

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">ReflectApp</string>
-    <string name="facebook_app_id">APP_ID</string>
+    <string name="facebook_app_id">504815840167763</string>
 </resources>
